# Auto-code-v1

./: .env.example  .gitignore  AGENTS.md  AGENT_TOOLS.md  API.md  CHANGELOG.md  CHANGES.md  CLAUDE_HEADLESS.md  CLAUDE_SETUP.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_STEPS.md  DOCKER_MODES.md  ENV_SETUP_GUIDE.md  FEATURES.md  FILE_MODIFICATION_SERVICE.md  FRONTEND_INTEGRATION_SUMMARY.md  GUIDE.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LANGGRAPH_IMPLEMENTATION.md  LICENSE  MESSAGE_SYSTEM_README.md  Makefile  OBJECTIFS.md  PRODUCTION_INSTALL.md  QUICKSTART.md  QUICKSTART_CLAUDE.md  README.md  TODO.md  TODO_v2.md  WEBSOCKET_SYSTEM.md  WORKFLOW.md  docker-compose.dev.yml  docker-compose.e2e.yml  docker-compose.t2micro.yml  docker-compose.yml  generate_icons.py  setup.sh  test-deployment.sh  (+2 more)
backend/: .dockerignore  .env.example  .gitignore  BACKEND_MIGRATION_SUMMARY.md  COPILOT_AGENT_INTEGRATION.md  Dockerfile  GITHUB_ISSUES_IMPORT.md  GITHUB_ISSUES_INTEGRATION.md  PHASE1_COMPLETE.md  README.md  TEST_COPILOT_AGENT.md  WEBSOCKET_ERROR_HANDLING.md  WORKFLOW_REFACTORING.md  __init__.py  agent.py  claude_cli.py  cli.py  config.py  dev-requirements.txt  github_client.py  main.py  pyproject.toml  pytest.ini  rabbitmq_client.py  requirements.txt  test_agent.py  test_concept_api.py  test_concept_http.py  test_copilot_agent.py  test_github_issues.py  test_structure.py  worker.py
backend/cli/: README.md  __init__.py  utils.py
backend/src/: __init__.py  database.py
backend/templates/: python_fastapi_router.j2  python_model.j2  sql_create_table.j2  typescript_interface.j2
backend/tests/: __init__.py  conftest.py  test_api.py  (+24 more)
(+679 files in other folders)
