[project]
name = "auto-code-backend"
version = "2.0.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
ignore_missing_imports = true
warn_unused_ignores = false

# Allow common patterns that are hard to type precisely
disable_error_code = [
    "override",      # Signature overrides in services are intentional
    "union-attr",    # None checks done at runtime
    "return-value",  # List comprehensions with filter None
    "list-item",     # Same
    "arg-type",      # Dynamic argument types from HTTP/Neo4j
    "var-annotated", # Type inference is sufficient
    "no-redef",      # Duplicate class definitions (handled)
    "assignment",    # Flexible assignments from dynamic data
    "call-overload", # Dict construction from TypeVars
    "name-defined",  # Import issues handled at runtime
    "attr-defined",  # Dynamic attributes
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
